<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
    android:background="#C49A6C"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#C49A6C"
        android:contentDescription="Menu"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/RecipeBookButton"
        android:layout_width="86dp"
        android:layout_height="103dp"
        android:backgroundTint="#C49A6C"
        android:contentDescription="Recipe Book"
        android:scaleType="fitCenter"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/MixingBowlButton"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/ic_recipe_book" />

    <ImageButton
        android:id="@+id/MixingBowlButton"
        android:layout_width="122dp"
        android:layout_height="102dp"
        android:backgroundTint="#C49A6C"
        android:contentDescription="Mixing Bowl"
        android:scaleType="fitCenter"
        android:tint="#A5A4A4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974"
        app:srcCompat="@drawable/ic_bowl" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/BowlContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible">

        <View
            android:id="@+id/bowlContent"
            android:layout_width="384dp"
            android:layout_height="702dp"
            android:background="#997755"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/bowlTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bowlTV_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.06" />

        <Button
            android:id="@+id/BowlContentBackButton"
            android:layout_width="118dp"
            android:layout_height="59dp"
            android:layout_marginStart="48dp"
            android:text="@string/helper_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.931" />

        <Button
            android:id="@+id/button3"
            android:layout_width="118dp"
            android:layout_height="59dp"
            android:text="@string/bowl_mix_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.614"
            app:layout_constraintStart_toEndOf="@+id/BowlContentBackButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.931" />

        <LinearLayout
            android:layout_width="285dp"
            android:layout_height="204dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bowlTitle"
            app:layout_constraintVertical_bias="0.178">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BC_BreadFlour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/ig_bread_flour"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/BC_BreadFlourWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/helper_base_weight"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BC_BreadFlour2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/ig_wheat_flour"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/BC_BreadFlourWeight2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/helper_base_weight"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BC_Water"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/ig_water"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/BC_SaltWeight2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/helper_base_weight"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BC_Salt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/ig_salt"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/BC_SaltWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/helper_base_weight"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BC_Yeast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/ig_yeast"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/BC_YeastWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/helper_base_weight"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>